--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://files.catbox.moe/nexkkx.png" />
+    <link rel="icon" type="image/png" href="https://img1.pixhost.to/images/5552/595723529_faykal.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brat Brot Custome</title>
   </head>
